packages/doenetml/src/Viewer/renderers/choiceInput.css
/* CUSTOM STYLING FOR RADIO BUTTON */

/* Customize the label (the container) */
.doenet-viewer .radio-container {
    display: block;
    position: relative;
    padding-left: 24px;
    margin-bottom: 4px;
    min-height: 24px;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.doenet-viewer .radio-container label {
    cursor: pointer;
}

.doenet-viewer .radio-container-disabled {
    cursor: not-allowed;
}

.doenet-viewer .radio-container-disabled label {
    cursor: not-allowed;
}

/* Hide the browser's default radio button */
.doenet-viewer .radio-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 1;
    width: 1;
}

.doenet-viewer .radio-container-disabled input {
    cursor: not-allowed;
}

/* Create a custom radio button */
.doenet-viewer .radio-checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 18px;
    width: 18px;
    background-color: var(--mainGray);
    border-style: solid;
    border-color: var(--canvasText);
    border-radius: 50%;
}

.doenet-viewer .radio-checkmark-disabled {
    background-color: var(--mainGray);
    border-color: var(--mainGray);
    cursor: not-allowed;
}

/* On mouse-over, add a theme-aware blue background color */
.doenet-viewer .radio-container:hover input ~ .radio-checkmark {
    background-color: var(--indicatorHoverBlue);
}

/* On mouse-over of disabled, keep the grey background color */
.doenet-viewer .radio-container:hover input ~ .radio-checkmark-disabled {
    background-color: var(--mainGray);
}

/* When the radio button is checked, add a blue background */
.doenet-viewer .radio-container input:checked ~ .radio-checkmark {
    background-color: var(--mainBlue);
}

/* When a radio button has focus, add a dark blue outline */
.doenet-viewer .radio-container:focus-within input ~ .radio-checkmark {
    outline: 2px solid var(--mainBlue);
    outline-offset: 2px;
}

/* Create the indicator (the dot/circle - hidden when not checked) */
.doenet-viewer .radio-checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the indicator (dot/circle) when checked */
.doenet-viewer .radio-container input:checked ~ .radio-checkmark:after {
    display: block;
}

/* Style the indicator (dot/circle) */
.doenet-viewer .radio-container .radio-checkmark:after {
    top: 6px;
    left: 6px;
    width: 6px;
    height: 6px;
    border-radius: 50%;
    background: var(--canvas);
}

/* CUSTOM STYLING FOR CHECKBOX */

/* Customize the label (the container) */
.doenet-viewer .checkbox-container {
    display: block;
    position: relative;
    padding-left: 24px;
    margin-bottom: 4px;
    min-height: 24px;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.doenet-viewer .checkbox-container label {
    cursor: pointer;
}

.doenet-viewer .checkbox-container-disabled {
    cursor: not-allowed;
}

.doenet-viewer .checkbox-container-disabled label {
    cursor: not-allowed;
}

/* Hide the browser's default checkbox */
.doenet-viewer .checkbox-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 1;
    width: 1;
}

.doenet-viewer .checkbox-container-disabled input {
    cursor: not-allowed;
}

/* Create a custom checkbox */
.doenet-viewer .checkbox-checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 18px;
    width: 18px;
    background-color: var(--mainGray);
    border-style: solid;
    border-color: var(--canvasText);
    border-radius: var(--mainBorderRadius);
}

.doenet-viewer .checkbox-checkmark-disabled {
    background-color: var(--mainGray);
    border-color: var(--mainGray);
    cursor: not-allowed;
}

/* On mouse-over, use the theme-aware indicator hover color */
.doenet-viewer .checkbox-container:hover input ~ .checkbox-checkmark {
    background-color: var(--indicatorHoverBlue);
}

/* On mouse-over of disabled, keep the grey background color */
.doenet-viewer .checkbox-container:hover input ~ .checkbox-checkmark-disabled {
    background-color: var(--mainGray);
}

/* When the checkbox is checked, add a dark blue background */
.doenet-viewer .checkbox-container input:checked ~ .checkbox-checkmark {
    background-color: var(--mainBlue);
}

/* When a checkbox has focus, add a dark blue outline */
.doenet-viewer .checkbox-container:focus-within input ~ .checkbox-checkmark {
    outline: 2px solid var(--mainBlue);
    outline-offset: 2px;
}

/* Create the checkmark/indicator (hidden when not checked) */
.doenet-viewer .checkbox-checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.doenet-viewer .checkbox-container input:checked ~ .checkbox-checkmark:after {
    display: block;
}

/* Style the checkmark/indicator */
.doenet-viewer .checkbox-container .checkbox-checkmark:after {
    left: 5px;
    top: 1px;
    width: 5px;
    height: 10px;
    border: solid var(--canvas);
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

/* CUSTOM STYLING FOR SELECT */
.doenet-viewer .custom-select {
    border-radius: var(--mainBorderRadius);
    margin: 0px 4px 4px 4px;
    border: var(--mainBorder);
    cursor: pointer;
}

.doenet-viewer .custom-select-disabled {
    border: 2px solid var(--mainGray);
    cursor: not-allowed;
}

.doenet-viewer .custom-select-correct {
    border-color: var(--mainGreen);
}
.doenet-viewer .custom-select-incorrect {
    border-color: var(--mainRed);
}
.doenet-viewer .custom-select-partialcorrect {
    border-color: var(--mainOrange);
}

.doenet-viewer .custom-select:focus-within {
    outline: var(--mainBorder);
    outline-offset: 2px;
}

.doenet-viewer .custom-select-correct:focus-within {
    outline-color: var(--mainGreen);
}
.doenet-viewer .custom-select-incorrect:focus-within {
    outline-color: var(--mainRed);
}
.doenet-viewer .custom-select-partialcorrect:focus-within {
    outline-color: var(--mainOrange);
}

